Fixed Java 8 build break